--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.profiles.active=local
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=create-drop
+
+#개발할 때 sql로깅
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+app.host=http://localhost:8080
